--- a/sysutils/pciutils/Makefile
+++ b/sysutils/pciutils/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2009/05/01 14:50:38 zafer Exp $
+# $NetBSD: Makefile,v 1.15 2009/07/08 06:00:47 hasso Exp $
 
-DISTNAME=	pciutils-3.0.2
+DISTNAME=	pciutils-3.1.3
 CATEGORIES=	sysutils
 MASTER_SITES=	ftp://atrey.karlin.mff.cuni.cz/pub/linux/pci/ \
 		ftp://ftp.kernel.org/pub/software/utils/pciutils/ 
