--- a/converters/p5-JSON-Any/Makefile
+++ b/converters/p5-JSON-Any/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2009/06/11 12:06:10 abs Exp $
+# $NetBSD: Makefile,v 1.11 2009/07/08 07:56:40 sno Exp $
 
-DISTNAME=		JSON-Any-1.19
+DISTNAME=		JSON-Any-1.21
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		www perl5 converters
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=JSON/}
@@ -8,6 +8,7 @@ MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=JSON/}
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/JSON-Any/
 COMMENT=		Wrapper Class for the various JSON classes
+LICENSE=		${PERL5_LICENSE}
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
@@ -15,7 +16,8 @@ PERL5_PACKLIST=		auto/JSON/Any/.packlist
 PERL5_MODULE_TYPE=	Module::Install
 
 # p5-JSON-XS appears to be the current "best of breed"
-DEPENDS+=		p5-JSON-XS-[0-9]*:../../converters/p5-JSON-XS
+# and is the preferred JSON dependency (see Makefile.PL)
+DEPENDS+=		p5-JSON-XS>=2.232:../../converters/p5-JSON-XS
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
