--- a/devel/p5-Devel-StackTrace/Makefile
+++ b/devel/p5-Devel-StackTrace/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2008/11/05 23:18:48 he Exp $
+# $NetBSD: Makefile,v 1.23 2009/07/08 08:10:23 sno Exp $
 #
 
-DISTNAME=		Devel-StackTrace-1.20
+DISTNAME=		Devel-StackTrace-1.21
 PKGNAME=		p5-${DISTNAME}00
 SVR4_PKGNAME=		p5dst
 CATEGORIES=		devel perl5
@@ -10,12 +10,12 @@ MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Devel/}
 MAINTAINER=		rhaen@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/Devel-StackTrace/
 COMMENT=		Perl5 module for stack trace and stack trace frame objects
+LICENSE=		${PERL5_LICENSE}
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
-DEPENDS+=		p5-Test-Simple>=0.46:../../devel/p5-Test-Simple
-
 PERL5_PACKLIST=		auto/Devel/StackTrace/.packlist
+PERL5_MODULE_TYPE=	Module::Build
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
