--- a/devel/p5-Module-ScanDeps/Makefile
+++ b/devel/p5-Module-ScanDeps/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2009/05/10 00:01:55 seb Exp $
+# $NetBSD: Makefile,v 1.16 2009/07/08 08:21:28 sno Exp $
 #
 
-DISTNAME=	Module-ScanDeps-0.90
+DISTNAME=	Module-ScanDeps-0.91
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5msd
 CATEGORIES=	devel perl5
@@ -10,9 +10,12 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Module/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Module-ScanDeps/
 COMMENT=	Perl 5 module to recursively scan Perl code for dependencies
+LICENSE=	${PERL5_LICENSE}
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST=	auto/Module/ScanDeps/.packlist
+
+REPLACE_PERL+=	script/scandeps.pl
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
