--- a/textproc/p5-Text-SimpleTable/Makefile
+++ b/textproc/p5-Text-SimpleTable/Makefile
@@ -1,13 +1,15 @@
-# $NetBSD: Makefile,v 1.3 2008/11/22 00:19:17 he Exp $
+# $NetBSD: Makefile,v 1.4 2009/07/08 11:10:05 sno Exp $
 
-DISTNAME=	Text-SimpleTable-0.05
+DISTNAME=	Text-SimpleTable-1.2
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	textproc perl5
-MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../by-authors/id/S/SR/SRI/}
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Text/}
+#MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../by-authors/id/S/SR/SRI/}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://search.cpan.org/dist/Text-SimpleTable/
 COMMENT=	Simple Eyecandy ASCII Tables
+LICENSE=	${PERL5_LICENSE}
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/Text/SimpleTable/.packlist
