--- a/misc/deskbar-applet/Makefile
+++ b/misc/deskbar-applet/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.38 2009/05/19 11:53:49 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2009/07/08 11:21:22 abs Exp $
 #
 
 DISTNAME=	deskbar-applet-2.26.2
@@ -23,7 +23,7 @@ PKGCONFIG_OVERRIDE=	data/deskbar-applet.pc
 
 GCONF_SCHEMAS=		deskbar-applet.schemas
 
-PYTHON_VERSIONS_ACCEPTED=	25 24
+PYTHON_VERSIONS_ACCEPTED=	26 25 24
 PYTHON_PATCH_SCRIPTS=		deskbar/deskbar-applet.py
 PY_PATCHPLIST=			yes
 
