--- a/textproc/p5-Text-Reflow/Makefile
+++ b/textproc/p5-Text-Reflow/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.4 2009/05/21 13:20:14 sno Exp $
+# $NetBSD: Makefile,v 1.5 2009/07/08 11:24:23 sno Exp $
 #
 
-DISTNAME=		Text-Reflow-1.06
+DISTNAME=		Text-Reflow-1.07
 PKGNAME=		p5-${DISTNAME}
 SVR4_PKGNAME=		p5rfl
 CATEGORIES=		textproc perl5
@@ -10,6 +10,7 @@ MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Text/}
 MAINTAINER=		heinz@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/Text-Reflow/
 COMMENT=		Reflowing of text using Knuth's paragraphing algorithm
+LICENSE=		gnu-gpl-v2
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
 PKG_DESTDIR_SUPPORT=	user-destdir
