--- a/www/p5-Catalyst-Runtime/Makefile
+++ b/www/p5-Catalyst-Runtime/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2009/06/15 21:52:22 sno Exp $
+# $NetBSD: Makefile,v 1.11 2009/07/08 11:46:32 sno Exp $
 
-DISTNAME=	Catalyst-Runtime-5.80005
+DISTNAME=	Catalyst-Runtime-5.80007
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	www perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Catalyst/}
@@ -25,17 +25,20 @@ DEPENDS+=	p5-MRO-Compat-[0-9]*:../../devel/p5-MRO-Compat
 DEPENDS+=	{perl>=5.10,p5-Module-Pluggable>=3.01}:../../devel/p5-Module-Pluggable
 DEPENDS+=	p5-Moose>=0.78:../../devel/p5-Moose
 DEPENDS+=	p5-MooseX-Emulate-Class-Accessor-Fast>=0.00801:../../devel/p5-MooseX-Emulate-Class-Accessor-Fast
-DEPENDS+=	p5-MooseX-MethodAttributes>=0.10:../../devel/p5-MooseX-MethodAttributes
+DEPENDS+=	p5-MooseX-MethodAttributes>=0.12:../../devel/p5-MooseX-MethodAttributes
 DEPENDS+=	p5-Path-Class>=0.09:../../devel/p5-Path-Class
 DEPENDS+=	{perl>=5.10,p5-Scalar-List-Utils>=0}:../../devel/p5-Scalar-List-Utils
 #DEPENDS+=	p5-Scope-Upper>=0.06:../../devel/p5-Scope-Upper
+DEPENDS+=	p5-String-RewritePrefix>=0.004:../../textproc/p5-String-RewritePrefix
 DEPENDS+=	p5-Sub-Exporter-[0-9]*:../../devel/p5-Sub-Exporter
+DEPENDS+=	p5-Task-Weaken-[0-9]*:../../devel/p5-Task-Weaken
 DEPENDS+=	p5-Text-SimpleTable>=0.03:../../textproc/p5-Text-SimpleTable
 DEPENDS+=	{perl>=5.10,p5-Time-HiRes>=0}:../../time/p5-Time-HiRes
 DEPENDS+=	p5-Tree-Simple>=1.15:../../devel/p5-Tree-Simple
 DEPENDS+=	p5-Tree-Simple-VisitorFactory>=0:../../devel/p5-Tree-Simple-VisitorFactory
 DEPENDS+=	p5-URI>=1.35:../../www/p5-URI
 DEPENDS+=	p5-libwww>=5.805:../../www/p5-libwww
+DEPENDS+=	p5-namespace-autoclean-[0-9]*:../../devel/p5-namespace-autoclean
 DEPENDS+=	p5-namespace-clean-[0-9]*:../../devel/p5-namespace-clean
 
 # Recommends:
@@ -43,7 +46,8 @@ DEPENDS+=	p5-B-Hooks-OP-Check-StashChange-[0-9]*:../../devel/p5-B-Hooks-OP-Check
 
 BUILD_DEPENDS+=	p5-Class-Data-Inheritable-[0-9]*:../../devel/p5-Class-Data-Inheritable
 BUILD_DEPENDS+=	p5-Test-Exception-[0-9]*:../../devel/p5-Test-Exception
-BUILD_DEPENDS+=	p5-Test-MockObject>=1.07:../../devel/p5-Test-MockObject
+#BUILD_DEPENDS+=	p5-Test-MockObject>=1.07:../../devel/p5-Test-MockObject
+BUILD_DEPENDS+=	p5-Test-Simple>=0.88:../../devel/p5-Test-Simple
 
 MAKE_ENV+=	PERL_EXTUTILS_AUTOINSTALL=--skipdeps
 PERL5_PACKLIST= auto/Catalyst/Runtime/.packlist
