--- a/net/py-twisted-docs/Makefile
+++ b/net/py-twisted-docs/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.10 2009/06/14 22:58:07 joerg Exp $
+# $NetBSD: Makefile,v 1.11 2009/07/08 12:16:45 reed Exp $
 
 PKGNAME=		py-twisted-docs-${TWISTED_VERSION}
-COMMENT=		Framework for writing networked applications
+COMMENT=		Framework for writing networked applications (documentation)
 .include "../../net/py-twisted/Makefile.common"
 
 NO_CONFIGURE=	yes
