--- a/fonts/tex-lm/Makefile
+++ b/fonts/tex-lm/Makefile
@@ -1,13 +1,14 @@
-# $NetBSD: Makefile,v 1.1.1.1 2009/07/07 23:13:54 minskim Exp $
+# $NetBSD: Makefile,v 1.2 2009/07/08 12:37:23 minskim Exp $
 # TeX Live Revision 7340
 
 DISTNAME=	lm
 PKGNAME=	tex-${DISTNAME}-1.106
+PKGREVISION=	1
 
 MAINTAINER=	minskim@NetBSD.org
 COMMENT=	Latin modern fonts in outline formats
 
-CONFLICTS+=	teTeX-texmf<=3.0nb15
+CONFLICTS+=	teTeX-texmf<=3.0nb16
 
 TEX_MAP_FILES+=	lm.map
 
