--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.486 2009/07/08 11:34:37 sno Exp $
+# $NetBSD: Makefile,v 1.487 2009/07/08 12:49:35 sno Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -244,6 +244,7 @@ SUBDIR+=	p5-Template-Declare
 SUBDIR+=	p5-Template-Plugin-CSV
 SUBDIR+=	p5-Template-Plugin-Latex
 SUBDIR+=	p5-Template-Plugin-Number-Format
+SUBDIR+=	p5-Template-Plugin-YAML
 SUBDIR+=	p5-Text-Aspell
 SUBDIR+=	p5-Text-Autoformat
 SUBDIR+=	p5-Text-Balanced
