--- a/editors/emacs-snapshot/Makefile
+++ b/editors/emacs-snapshot/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2009/06/07 20:12:06 hasso Exp $
+# $NetBSD: Makefile,v 1.3 2009/07/08 13:32:39 minskim Exp $
 
-DISTNAME=	emacs-snapshot_20090604.orig
+DISTNAME=	emacs-snapshot_20090703.orig
 PKGNAME=	${DISTNAME:S/snapshot_/${EMACS_VERSION}./:S/.orig//}
-PKGREVISION=	1
 CATEGORIES=	editors
 MASTER_SITES=	http://emacs.orebokech.com/pool/main/e/emacs-snapshot/
 
@@ -30,7 +29,7 @@ BUILD_DEFS+=		GAMEDATAMODE
 PLIST_SRC+=		PLIST
 
 BUILD_TARGET=		bootstrap
-EMACS_VERSION=		23.0.94
+EMACS_VERSION=		23.0.95
 PLIST_SUBST+=		EMACS_VERSION=${EMACS_VERSION}
 
 REPLACE_PERL=		lib-src/grep-changelog
