--- a/security/p5-Net-OpenSSH/Makefile
+++ b/security/p5-Net-OpenSSH/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2009/05/17 10:37:35 seb Exp $
+# $NetBSD: Makefile,v 1.2 2009/07/08 13:48:30 sno Exp $
 #
 
-DISTNAME=		Net-OpenSSH-0.34
+DISTNAME=		Net-OpenSSH-0.35
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		security net perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Net/}
@@ -9,6 +9,7 @@ MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=Net/}
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://search.cpan.org/dist/Net-OpenSSH/
 COMMENT=		Perl SSH client package implemented on top of OpenSSH
+LICENSE=		${PERL5_LICENSE}
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 USE_LANGUAGES=		# empty
