--- a/cad/electric/Makefile
+++ b/cad/electric/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2007/05/09 02:42:25 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.17 2009/07/08 15:35:48 joerg Exp $
 #
 
 DISTNAME=	electric-7.00
@@ -10,6 +10,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.gnu.org/software/electric/electric.html
 COMMENT=	Electrical CAD system
 
+PKG_DESTDIR_SUPPORT=	user-destdir
+
 GNU_CONFIGURE=		YES
 USE_LANGUAGES=		c c++
 
@@ -20,8 +22,8 @@ post-patch:
 		< ${WRKSRC}/src/include/config.h.bak \
 		> ${WRKSRC}/src/include/config.h
 
-post-install:
-	cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} ${MAKE_PROGRAM} install.html
+INSTALL_TARGET=	install install.html
+INSTALLATION_DIRS=	bin
 
 .include "../../mk/motif.buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
