--- a/audio/py-id3lib/Makefile
+++ b/audio/py-id3lib/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2009/07/07 19:15:01 drochner Exp $
+# $NetBSD: Makefile,v 1.2 2009/07/08 15:54:33 drochner Exp $
 #
 
 DISTNAME=	pyid3lib-0.5.1
@@ -13,6 +13,7 @@ COMMENT=	Python module for editing ID3v2 tags of MP3 audio files
 
 USE_LANGUAGES=	c c++
 PYDISTUTILSPKG=	yes
+PKG_DESTDIR_SUPPORT= user-destdir
 
 .include "../../lang/python/extension.mk"
 .include "../../audio/id3lib/buildlink3.mk"
