--- a/audio/py-libmtag/Makefile
+++ b/audio/py-libmtag/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1.1.1 2009/07/07 19:04:05 drochner Exp $
+# $NetBSD: Makefile,v 1.2 2009/07/08 16:02:05 drochner Exp $
 #
 
 DISTNAME=	libmtag-python-0.3.0
@@ -12,6 +12,7 @@ COMMENT=	Python binding for libmtag
 
 USE_TOOLS+=	pkg-config
 PYDISTUTILSPKG=	yes
+PKG_DESTDIR_SUPPORT= user-destdir
 
 .include "../../lang/python/extension.mk"
 .include "../../audio/libmtag/buildlink3.mk"
