--- a/audio/libdiscid/Makefile
+++ b/audio/libdiscid/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2009/07/07 17:44:50 drochner Exp $
+# $NetBSD: Makefile,v 1.5 2009/07/08 16:07:20 drochner Exp $
 
 DISTNAME=	libdiscid-0.2.2
 CATEGORIES=	audio
@@ -15,5 +15,6 @@ USE_LIBTOOL=	yes
 USE_TOOLS+=	pkg-config
 
 PKGCONFIG_OVERRIDE+=	libdiscid.pc.in
+PKG_DESTDIR_SUPPORT= user-destdir
 
 .include "../../mk/bsd.pkg.mk"
