--- a/games/dopewars/Makefile
+++ b/games/dopewars/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.38 2008/01/19 09:16:21 wiz Exp $
+# $NetBSD: Makefile,v 1.39 2009/07/08 17:03:35 joerg Exp $
 
 DISTNAME=	dopewars-1.5.12
 CATEGORIES=	games
@@ -7,6 +7,8 @@ MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=dopewars/}
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://dopewars.sourceforge.net/
 COMMENT=	Make a fortune dealing drugs on the streets of New York
+
+PKG_DESTDIR_SUPPORT=	destdir
 
 USE_DIRS+=		xdg-1.1
 USE_LIBTOOL=		yes
