--- a/x11/modular-xorg-server/Makefile
+++ b/x11/modular-xorg-server/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.46 2009/06/24 17:25:35 drochner Exp $
+# $NetBSD: Makefile,v 1.47 2009/07/08 17:55:59 hasso Exp $
 #
 
-DISTNAME=	xorg-server-1.6.1.901
+DISTNAME=	xorg-server-1.6.2
 PKGNAME=	modular-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=xserver/}
 EXTRACT_SUFX=	.tar.bz2
