--- a/graphics/Mesa/Makefile.version
+++ b/graphics/Mesa/Makefile.version
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.version,v 1.6 2009/06/05 11:10:35 wiz Exp $
+# $NetBSD: Makefile.version,v 1.7 2009/07/08 20:00:57 hasso Exp $
 #
 # When changing this version, please run "make distinfo" in the following
 # package directories:
@@ -12,5 +12,5 @@
 MESA_DISTNAME= 		MesaLib-${MESA_VERSION}
 MESA_SITES=		${MASTER_SITE_SOURCEFORGE:=mesa3d/}
 
-MESA_VERSION=		7.4.2
+MESA_VERSION=		7.4.4
 MESA_PKGVERSION=	${MESA_VERSION}
