--- a/graphics/glu/Makefile
+++ b/graphics/glu/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.54 2009/06/10 17:33:34 wiz Exp $
+# $NetBSD: Makefile,v 1.55 2009/07/08 20:00:58 hasso Exp $
 
 PKGNAME=	glu-${MESA_PKGVERSION}
-PKGREVISION=	1
 COMMENT=	GLU polygon tessellation facility for Mesa
 
 CONFLICTS+=	Mesa-glx-[0-9]*
