--- a/www/dillo/Makefile
+++ b/www/dillo/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.43 2009/07/07 14:24:05 joerg Exp $
+# $NetBSD: Makefile,v 1.44 2009/07/09 05:04:02 snj Exp $
 
-DISTNAME=	dillo-2.0
+DISTNAME=	dillo-2.1.1
 CATEGORIES=	www
 MASTER_SITES=	http://www.dillo.org/download/
 EXTRACT_SUFX=	.tar.bz2
@@ -20,9 +20,11 @@ USE_TOOLS+=	perl:run
 
 DEPENDS+=	wget-[0-9]*:../../net/wget
 
+PKG_SYSCONFSUBDIR=	dillo
 EGDIR=		${PREFIX}/share/examples/dillo
 CONF_FILES=	${EGDIR}/dillorc ${PKG_SYSCONFDIR}/dillorc
 CONF_FILES+=	${EGDIR}/dpidrc ${PKG_SYSCONFDIR}/dpidrc
+CONF_FILES+=	${EGDIR}/keysrc ${PKG_SYSCONFDIR}/keysrc
 
 INSTALLATION_DIRS=	share/doc/dillo ${EGDIR}
 
@@ -32,6 +34,7 @@ post-install:
 	${INSTALL_DATA} ${WRKSRC}/doc/*.txt ${DESTDIR}${PREFIX}/share/doc/dillo
 	${INSTALL_DATA} ${WRKSRC}/doc/README ${DESTDIR}${PREFIX}/share/doc/dillo
 	${INSTALL_DATA} ${WRKSRC}/dillorc ${DESTDIR}${EGDIR}
+	${INSTALL_DATA} ${WRKSRC}/src/keysrc ${DESTDIR}${EGDIR}
 
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
