--- a/net/libtorrent/Makefile
+++ b/net/libtorrent/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.33 2009/06/04 19:15:46 tron Exp $
+# $NetBSD: Makefile,v 1.34 2009/07/09 10:42:28 tron Exp $
 
-DISTNAME=	libtorrent-0.12.2
-PKGREVISION=	2
+DISTNAME=	libtorrent-0.12.4
 CATEGORIES=	net
 MASTER_SITES=	${HOMEPAGE:=downloads/}
 
@@ -21,7 +20,7 @@ GCC_REQD+=		3.3
 
 .include "../../mk/bsd.prefs.mk"
 
-.if !empty(OPSYS:M*BSD) || ${OPSYS} == "DragonFly"
+.if !empty(OPSYS:M*BSD) || ${OPSYS} == "DragonFly" || ${OPSYS} == "Darwin"
 CONFIGURE_ARGS+=	--with-kqueue
 .endif
 
