--- a/net/rtorrent/Makefile
+++ b/net/rtorrent/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.32 2009/07/07 21:22:08 joerg Exp $
+# $NetBSD: Makefile,v 1.33 2009/07/09 10:42:29 tron Exp $
 
-DISTNAME=	rtorrent-0.8.2
+DISTNAME=	rtorrent-0.8.4
 CATEGORIES=	net
 MASTER_SITES=	${HOMEPAGE:=downloads/}
 
