--- a/x11/x11vnc/Makefile
+++ b/x11/x11vnc/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2009/05/19 08:59:39 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2009/07/09 11:17:10 obache Exp $
 #
 
-DISTNAME=	x11vnc-0.9.7
+DISTNAME=	x11vnc-0.9.8
 CATEGORIES=	x11 net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=libvncserver/}
 
