--- a/games/gnome-games/Makefile
+++ b/games/gnome-games/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.97 2009/05/20 00:58:16 wiz Exp $
+# $NetBSD: Makefile,v 1.98 2009/07/09 18:46:37 drochner Exp $
 
-DISTNAME=		gnome-games-2.26.2
-PKGREVISION=		1
+DISTNAME=		gnome-games-2.26.3
 CATEGORIES=		games gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-games/2.26/}
 EXTRACT_SUFX=		.tar.bz2
