Update to 0.17. Provided by Ulrich Etile on pkgsrc-users. Include sysutils/desktop-file-utils/desktopdb.mk per pkglint.
Geany 0.17 (May 02, 2009)

    Bug fixes:
    * Fix broken selection of "Document->Set Encoding" menu items.
    * Fix broken non-incremental search with the toolbar search entry when
      pressing Enter (closes #2638180).
    * Fix parsing of Make output (closes #2694479, patch by Andrea Mazzoleni).
    * Fix crashes on quitting Geany (closes #2533990).
    * Fix disabled Go to Tag items in the editor menu when using the
      keyboard (#2780044).
    * Prevent crashes when two or more top level items in the symbol
      list have the same name (closes #2778246).

    Prefs:
    * Add an option to set an additional plugin lookup path.
    * Add a hidden preference 'use_safe_file_saving'. This has serious side
      effects, please read the documentation before enabling this.

    Interface:
    * Add 'Send Selection to Terminal' command to the Edit->Format menu.
    * Change the background colour of the search entries in the Find
      and Replace dialogs according to the search results.
    * Add 'Close Other Documents' and 'Close All' menu items to the tab bar
      menu.
    * Add an option to allow appending the toolbar to the main menu bar
      to save some vertical space.
    * When a project is loaded, replace the project base path with the
      project name in the Documents sidebar for parent items (closes #2723679).
    * Make the file open dialog more compact.
    * Ellipsize tab labels and some status messages for very long
      filenames (closes #2777348).
    * Add new toolbar element: Print (patch by Roland Baudin).
    * Remember the active sidebar page between sessions.
    * Add "Recent Projects" menu to the Project menu (#2728630,
      patch by Elias Pschernig).
    * Add Tools->Configuration Files item for snippets.conf.

    Filetypes:
    * Fix wrong Fortran 90 comment characters when inserting templates.
    * Add filety

--- a/devel/geany/Makefile
+++ b/devel/geany/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2008/11/24 09:37:15 rillig Exp $
+# $NetBSD: Makefile,v 1.11 2009/07/18 19:37:42 wiz Exp $
 
-DISTNAME=	geany-0.15
+DISTNAME=	geany-0.17
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=geany/}
 
@@ -32,6 +32,7 @@ BUILDLINK_TRANSFORM+=	rm:-lstdc++
 CONFIGURE_ARGS+=	CC=gcc
 .endif
 
-.include "../../x11/gtk2/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
+.include "../../sysutils/desktop-file-utils/desktopdb.mk"
+.include "../../x11/gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
