--- a/devel/ncurses/Makefile
+++ b/devel/ncurses/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.89 2014/06/09 10:28:10 jperkin Exp $
+# $NetBSD: Makefile,v 1.90 2014/09/16 09:45:58 wiz Exp $
 
 .include "Makefile.common"
 
 COMMENT=	CRT screen handling and optimization package
-PKGREVISION=	3
+PKGREVISION=	4
 
 INSTALLATION_DIRS+=	share/examples
 
