Don't use comments in the middle of a multiline statements.

--- a/net/rancid/patches/patch-etc_Makefile.in
+++ b/net/rancid/patches/patch-etc_Makefile.in
@@ -1,16 +1,15 @@
-$NetBSD: patch-etc_Makefile.in,v 1.2 2014/07/01 13:33:40 pettai Exp $
+$NetBSD: patch-etc_Makefile.in,v 1.3 2014/09/19 08:31:26 joerg Exp $
 
 Don't install rancid.types.base as we will install it in example dir
 (in package Makefile)
 
 --- etc/Makefile.in.orig	2014-05-19 20:54:02.000000000 +0000
 +++ etc/Makefile.in
-@@ -354,7 +354,7 @@ install-sysconfDATA: $(sysconf_DATA)
+@@ -354,7 +354,6 @@ install-sysconfDATA: $(sysconf_DATA)
  	done | $(am__base_list) | \
  	while read files; do \
  	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(sysconfdir)'"; \
 -	  $(INSTALL_DATA) $$files "$(DESTDIR)$(sysconfdir)" || exit $$?; \
-+	  #$(INSTALL_DATA) $$files "$(DESTDIR)$(sysconfdir)" || exit $$?; \
  	done
  
  uninstall-sysconfDATA:
