Ren'Py 6.18.3 This release adds the showif statement to screen language. The showif statement shows and hides its children based on a condition. When its children are ATL transforms, showif delivers ATL events to manage the show and hide process.
Ren'Py's image prediction mechanism now models the return stack, and can predict images through a call and return pair. Previously, a call followed by a return would block image prediction.

Ren'Py now predicts that the start label will be called from the main menu. This will help to avoid unpredicted image loads at the very start of a game.

The ATL on statement now can take a comma-separated list of event names.

The new updater.UpdateVersion() function contacts an update server and determines if an update is available.

The new renpy.invoke_in_thread() function runs a function in a background thread, and restarts the interaction when that thread finishes.

While in self-voicing mode, the {w} and {p} tags are ignored.

The Traditional Chinese and Russian translations have been updated.


Bug Fixes
---------
Fixed a regression that could cause hiding transforms to skip time.

Fixed a bug that would cause the screen language if statement to show children from blocks with a false condition, if those child blocks were run during prediction.

Fixed an issue where SetScreenVariable and ToggleScreenVariable were declared as pure functions, but weren't. They now have been reimplemented as pure functions.

Fixed an issue where a grab could fail to transfer between interactions, leaving Ren'Py unresponsive.

--- a/games/py-renpy/Makefile
+++ b/games/py-renpy/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.15 2017/01/16 23:45:12 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2017/06/24 19:39:47 adam Exp $
 
-DISTNAME=	renpy-6.16.5-source
+DISTNAME=	renpy-6.18.3-source
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/-source//}
-PKGREVISION=	6
 CATEGORIES=	games
-MASTER_SITES=	http://www.renpy.org/dl/6.16.5/
+MASTER_SITES=	http://www.renpy.org/dl/${PKGVERSION_NOREV}/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	ryoon@NetBSD.org
@@ -13,19 +12,20 @@ COMMENT=	Visual Novel Engine written in Python
 LICENSE=	mit
 
 USE_TOOLS+=	pax
-
 PYSETUPSUBDIR=	module
-EGG_NAME=	Ren_Py-${PKGVERSION_NOREV}.525
-PYTHON_VERSIONS_INCOMPATIBLE=	34 35 36 # not yet ported as of 6.16.5
+EGG_NAME=	Ren_Py-${PKGVERSION_NOREV}.761
+
+PYTHON_VERSIONS_INCOMPATIBLE=	34 35 36 # not yet ported
 
 RENPY_DEPS_INSTALL+=	${BUILDLINK_PREFIX.SDL}
 RENPY_DEPS_INSTALL+=	${BUILDLINK_PREFIX.freetype2}
 RENPY_DEPS_INSTALL+=	${BUILDLINK_PREFIX.zlib}
-RENPY_DEPS_INSTALL+=	${BUILDLINK_PREFIX.ffmpeg010}/${BUILDLINK_LIBDIRS.ffmpeg010}
+RENPY_DEPS_INSTALL+=	${BUILDLINK_PREFIX.ffmpeg2}/${BUILDLINK_LIBDIRS.ffmpeg2}
 
 MAKE_ENV+=	RENPY_DEPS_INSTALL=${RENPY_DEPS_INSTALL:ts;:S,;,::,g:Q}
+MAKE_ENV+=	RENPY_CYTHON=cython${PYVERSSUFFIX}
 
-INSTALLATION_DIRS=	bin
+INSTALLATION_DIRS=	bin ${RENPY_DIR}
 
 REPLACE_PYTHON=		renpy.py launcher/game/tkaskdir.py
 
@@ -43,11 +43,12 @@ post-install:
 	cd ${DESTDIR}${PREFIX}/bin && ${LN} -fs ../${RENPY_DIR}/renpy.py .
 
 .include "../../converters/fribidi/buildlink3.mk"
+.include "../../devel/py-cython/buildlink3.mk"
 .include "../../devel/py-game/buildlink3.mk"
 .include "../../devel/zlib/buildlink3.mk"
 .include "../../graphics/freetype2/buildlink3.mk"
 .include "../../graphics/glew/buildlink3.mk"
 .include "../../lang/python/application.mk"
 .include "../../lang/python/distutils.mk"
-.include "../../multimedia/ffmpeg010/buildlink3.mk"
+.include "../../multimedia/ffmpeg2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
