--- a/devel/p5-constant-def/Makefile
+++ b/devel/p5-constant-def/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2017/06/05 14:23:53 ryoon Exp $
+# $NetBSD: Makefile,v 1.9 2017/06/28 08:27:41 jperkin Exp $
 #
 
 DISTNAME=	constant-def-0.01
@@ -14,6 +14,8 @@ LICENSE=	${PERL5_LICENSE}
 
 #DEPENDS+=	{perl>=5.13.11,p5-Test-Simple>=0.98}:../../devel/p5-Test-Simple
 DEPENDS+=	p5-ex-lib>=0.03:../../devel/p5-ex-lib
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
