--- a/editors/p5-Padre-Plugin-DataWalker/Makefile
+++ b/editors/p5-Padre-Plugin-DataWalker/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2017/06/05 14:23:56 ryoon Exp $
+# $NetBSD: Makefile,v 1.12 2017/06/28 08:27:44 jperkin Exp $
 #
 
 DISTNAME=	Padre-Plugin-DataWalker-0.02
@@ -22,6 +22,8 @@ BUILD_DEPENDS+=	p5-Locale-Msgfmt>=0.14:../../devel/p5-Locale-Msgfmt
 
 PERL5_PACKLIST=		auto/Padre/Plugin/DataWalker/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 #pre-configure:
 #	cd ${WRKSRC} && find `pwd` -name "*.orig" -type f | xargs rm
