--- a/editors/p5-Padre-Plugin-Git/Makefile
+++ b/editors/p5-Padre-Plugin-Git/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2017/06/05 14:23:56 ryoon Exp $
+# $NetBSD: Makefile,v 1.13 2017/06/28 08:27:43 jperkin Exp $
 
 DISTNAME=	Padre-Plugin-Git-0.03
 PKGNAME=	p5-${DISTNAME}
@@ -17,6 +17,8 @@ DEPENDS+=	git-base-[0-9]*:../../devel/git-base
 
 PERL5_PACKLIST=		auto/Padre/Plugin/Git/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 #pre-configure:
 #	cd ${WRKSRC} && find `pwd` -name "*.orig" -type f | xargs rm
