--- a/editors/p5-Padre-Plugin-Kate/Makefile
+++ b/editors/p5-Padre-Plugin-Kate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2017/06/05 14:23:56 ryoon Exp $
+# $NetBSD: Makefile,v 1.12 2017/06/28 08:27:43 jperkin Exp $
 #
 
 DISTNAME=	Padre-Plugin-Kate-0.04
@@ -17,6 +17,8 @@ DEPENDS+=	p5-Syntax-Highlight-Engine-Kate>=0.05:../../textproc/p5-Syntax-Highlig
 
 PERL5_PACKLIST=		auto/Padre/Plugin/Kate/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 #pre-configure:
 #	cd ${WRKSRC} && find `pwd` -name "*.orig" -type f | xargs rm
