--- a/editors/p5-Padre-Plugin-PerlTidy/Makefile
+++ b/editors/p5-Padre-Plugin-PerlTidy/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2017/06/05 14:23:56 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2017/06/28 08:27:43 jperkin Exp $
 #
 
 DISTNAME=	Padre-Plugin-PerlTidy-0.22
@@ -20,6 +20,8 @@ DEPENDS+=	p5-Perl-Tidy>=20101217:../../devel/p5-Perl-Tidy
 
 PERL5_PACKLIST=		auto/Padre/Plugin/PerlTidy/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 #pre-configure:
 #	cd ${WRKSRC} && find `pwd` -name "*.orig" -type f | xargs rm
