--- a/editors/p5-Padre-Plugin-XS/Makefile
+++ b/editors/p5-Padre-Plugin-XS/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2017/06/05 14:23:57 ryoon Exp $
+# $NetBSD: Makefile,v 1.11 2017/06/28 08:27:44 jperkin Exp $
 #
 
 DISTNAME=	Padre-Plugin-XS-0.02
@@ -17,6 +17,8 @@ DEPENDS+=	p5-Perl-APIReference>=0.04:../../devel/p5-Perl-APIReference
 
 PERL5_PACKLIST=		auto/Padre/Plugin/XS/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 #pre-configure:
 #	cd ${WRKSRC} && find `pwd` -name "*.orig" -type f | xargs rm
