--- a/mail/p5-Catalyst-View-Email/Makefile
+++ b/mail/p5-Catalyst-View-Email/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2017/06/05 14:24:03 ryoon Exp $
+# $NetBSD: Makefile,v 1.20 2017/06/28 08:27:44 jperkin Exp $
 
 DISTNAME=	Catalyst-View-Email-0.36
 PKGNAME=	p5-${DISTNAME}
@@ -33,6 +33,8 @@ PERL5_PACKLIST=	auto/Catalyst/View/Email/.packlist
 EXTRACT_USING=		gtar
 
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
