--- a/net/p5-Net-GitHub/Makefile
+++ b/net/p5-Net-GitHub/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2017/06/05 14:24:19 ryoon Exp $
+# $NetBSD: Makefile,v 1.19 2017/06/28 08:27:43 jperkin Exp $
 #
 
 DISTNAME=	Net-GitHub-0.83
@@ -21,6 +21,8 @@ DEPENDS+=	p5-Type-Tiny-[0-9]*:../../devel/p5-Type-Tiny
 DEPENDS+=	p5-JSON-MaybeXS-[0-9]*:../../converters/p5-JSON-MaybeXS
 DEPENDS+=	p5-URI-[0-9]*:../../www/p5-URI
 DEPENDS+=       p5-Cache-LRU-[0-9]*:../../devel/p5-Cache-LRU
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
