--- a/net/p5-POE-Component-Client-Ident/Makefile
+++ b/net/p5-POE-Component-Client-Ident/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2017/06/05 14:24:23 ryoon Exp $
+# $NetBSD: Makefile,v 1.19 2017/06/28 08:27:43 jperkin Exp $
 #
 
 DISTNAME=	POE-Component-Client-Ident-1.16
@@ -16,6 +16,8 @@ DEPENDS+=	p5-POE>=0.38:../../devel/p5-POE
 BUILD_DEPENDS+=	p5-Test-POE-Server-TCP-[0-9]*:../../devel/p5-Test-POE-Server-TCP
 
 PERL5_PACKLIST=		auto/POE/Component/Client/Ident/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
