--- a/textproc/p5-FormValidator-Simple/Makefile
+++ b/textproc/p5-FormValidator-Simple/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2017/06/05 14:24:40 ryoon Exp $
+# $NetBSD: Makefile,v 1.20 2017/06/28 08:27:40 jperkin Exp $
 
 DISTNAME=	FormValidator-Simple-0.29
 PKGNAME=	p5-${DISTNAME}
@@ -29,6 +29,8 @@ DEPENDS+=	p5-YAML>=0.39:../../textproc/p5-YAML
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST=	auto/FormValidator/Simple/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
