--- a/textproc/p5-PPI-HTML/Makefile
+++ b/textproc/p5-PPI-HTML/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2017/06/05 14:24:43 ryoon Exp $
+# $NetBSD: Makefile,v 1.13 2017/06/28 08:27:40 jperkin Exp $
 
 DISTNAME=	PPI-HTML-1.08
 PKGNAME=	p5-${DISTNAME}
@@ -14,6 +14,8 @@ LICENSE=	${PERL5_LICENSE}
 USE_LANGUAGES=		# empty
 PERL5_PACKLIST=		auto/PPI/HTML/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 DEPENDS+=	p5-CSS-Tiny>=1.10:../../www/p5-CSS-Tiny
 DEPENDS+=	p5-PPI>=0.990:../../devel/p5-PPI
