--- a/www/p5-Catalyst-Controller-FormBuilder/Makefile
+++ b/www/p5-Catalyst-Controller-FormBuilder/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2017/06/05 14:25:12 ryoon Exp $
+# $NetBSD: Makefile,v 1.19 2017/06/28 08:27:43 jperkin Exp $
 
 DISTNAME=	Catalyst-Controller-FormBuilder-0.06
 PKGNAME=	p5-${DISTNAME}
@@ -26,6 +26,8 @@ DEPENDS+=	p5-Catalyst-View-TT>=0.23:../../www/p5-Catalyst-View-TT
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/Catalyst/Controller/FormBuilder/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
