--- a/www/p5-Catalyst-Model-File/Makefile
+++ b/www/p5-Catalyst-Model-File/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2017/06/05 14:25:13 ryoon Exp $
+# $NetBSD: Makefile,v 1.12 2017/06/28 08:27:41 jperkin Exp $
 
 DISTNAME=	Catalyst-Model-File-0.10
 PKGNAME=	p5-${DISTNAME}
@@ -18,6 +18,8 @@ DEPENDS+=	p5-Path-Class-[0-9]*:../../devel/p5-Path-Class
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST= auto/Catalyst/Model/File/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
