--- a/www/p5-Catalyst-Plugin-I18N/Makefile
+++ b/www/p5-Catalyst-Plugin-I18N/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.17 2017/06/05 14:25:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.18 2017/06/28 08:27:41 jperkin Exp $
 
 DISTNAME=	Catalyst-Plugin-I18N-0.10
 PKGNAME=	p5-${DISTNAME}
@@ -18,6 +18,8 @@ DEPENDS+=	p5-MRO-Compat>=0.10:../../devel/p5-MRO-Compat
 
 USE_LANGUAGES=	# empty
 PERL5_PACKLIST=	auto/Catalyst/Plugin/I18N/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
