--- a/www/p5-Catalyst-Plugin-Session-Store-File/Makefile
+++ b/www/p5-Catalyst-Plugin-Session-Store-File/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.18 2017/06/05 14:25:14 ryoon Exp $
+# $NetBSD: Makefile,v 1.19 2017/06/28 08:27:40 jperkin Exp $
 
 DISTNAME=	Catalyst-Plugin-Session-Store-File-0.18
 PKGNAME=	p5-${DISTNAME}
@@ -19,6 +19,8 @@ DEPENDS+=	p5-MRO-Compat>=0.10:../../devel/p5-MRO-Compat
 
 PERL5_PACKLIST= 	auto/Catalyst/Plugin/Session/Store/File/.packlist
 PERL5_MODULE_TYPE=	Module::Install::Bundled
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
