--- a/www/p5-Kwiki-ModPerl/Makefile
+++ b/www/p5-Kwiki-ModPerl/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2017/06/05 14:25:25 ryoon Exp $
+# $NetBSD: Makefile,v 1.15 2017/06/28 08:27:43 jperkin Exp $
 
 DISTNAME=	Kwiki-ModPerl-0.09
 PKGNAME=	p5-${DISTNAME}
@@ -13,6 +13,8 @@ COMMENT=	Kwiki integration with ModPerl
 DEPENDS+=	p5-Kwiki>=0.38:../../www/p5-Kwiki
 
 PERL5_PACKLIST=		auto/Kwiki/ModPerl/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../mk/apache.mk"
 .include "../../www/ap2-perl/buildlink3.mk"
