--- a/www/p5-Kwiki-Revisions/Makefile
+++ b/www/p5-Kwiki-Revisions/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2017/06/05 14:25:25 ryoon Exp $
+# $NetBSD: Makefile,v 1.22 2017/06/28 08:27:42 jperkin Exp $
 
 DISTNAME=	Kwiki-Revisions-0.15
 PKGNAME=	p5-${DISTNAME}
@@ -13,6 +13,8 @@ COMMENT=	Kwiki revisions plugin
 DEPENDS+=	p5-Kwiki>=0.38:../../www/p5-Kwiki
 
 PERL5_PACKLIST=		auto/Kwiki/Revisions/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
