--- a/www/p5-Kwiki-Scode/Makefile
+++ b/www/p5-Kwiki-Scode/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2017/06/05 14:25:25 ryoon Exp $
+# $NetBSD: Makefile,v 1.21 2017/06/28 08:27:42 jperkin Exp $
 
 DISTNAME=	Kwiki-Scode-0.03
 PKGNAME=	p5-${DISTNAME}
@@ -14,6 +14,8 @@ DEPENDS+=	p5-GD>=1.32:../../graphics/p5-GD
 DEPENDS+=	p5-Kwiki>=0.36:../../www/p5-Kwiki
 
 PERL5_PACKLIST=		auto/Kwiki/Scode/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
