--- a/www/p5-Kwiki-UserPreferences/Makefile
+++ b/www/p5-Kwiki-UserPreferences/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2017/06/05 14:25:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.21 2017/06/28 08:27:40 jperkin Exp $
 
 DISTNAME=	Kwiki-UserPreferences-0.13
 PKGNAME=	p5-${DISTNAME}
@@ -13,6 +13,8 @@ COMMENT=	Kwiki user preferences plugin
 DEPENDS+=	p5-Kwiki>=0.37nb1:../../www/p5-Kwiki
 
 PERL5_PACKLIST=		auto/Kwiki/UserPreferences/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
