--- a/www/p5-Kwiki-Wikiwyg/Makefile
+++ b/www/p5-Kwiki-Wikiwyg/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2017/06/05 14:25:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2017/06/28 08:27:41 jperkin Exp $
 
 DISTNAME=	Kwiki-Wikiwyg-0.13
 PKGNAME=	p5-${DISTNAME}
@@ -13,6 +13,8 @@ COMMENT=	Kwiki plugin for WYSIWYG editing
 DEPENDS+=	p5-Kwiki>=0.38:../../www/p5-Kwiki
 
 PERL5_PACKLIST=	auto/Kwiki/Wikiwyg/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
