--- a/www/p5-Kwiki-Zipcode/Makefile
+++ b/www/p5-Kwiki-Zipcode/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2017/06/05 14:25:26 ryoon Exp $
+# $NetBSD: Makefile,v 1.15 2017/06/28 08:27:41 jperkin Exp $
 
 DISTNAME=	Kwiki-Zipcode-0.12
 PKGNAME=	p5-${DISTNAME}
@@ -13,6 +13,8 @@ COMMENT=	Kwiki Zipcode Plugin
 DEPENDS+=	p5-Kwiki>=0.34:../../www/p5-Kwiki
 
 PERL5_PACKLIST=		auto/Kwiki/Zipcode/.packlist
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
