--- a/www/p5-Plack-Handler-AnyEvent-ReverseHTTP/Makefile
+++ b/www/p5-Plack-Handler-AnyEvent-ReverseHTTP/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2017/06/05 14:25:28 ryoon Exp $
+# $NetBSD: Makefile,v 1.11 2017/06/28 08:27:44 jperkin Exp $
 
 DISTNAME=	Plack-Handler-AnyEvent-ReverseHTTP-0.04
 PKGNAME=	p5-${DISTNAME}
@@ -18,6 +18,8 @@ DEPENDS+=	p5-AnyEvent-[0-9]*:../../devel/p5-AnyEvent
 DEPENDS+=	p5-AnyEvent-ReverseHTTP-[0-9]*:../../www/p5-AnyEvent-ReverseHTTP
 DEPENDS+=	p5-Plack-[0-9]*:../../www/p5-Plack
 DEPENDS+=	p5-Plack>=0.99:../../www/p5-Plack
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
