--- a/www/p5-Tatsumaki/Makefile
+++ b/www/p5-Tatsumaki/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.13 2017/06/05 14:25:31 ryoon Exp $
+# $NetBSD: Makefile,v 1.14 2017/06/28 08:27:44 jperkin Exp $
 
 DISTNAME=	Tatsumaki-0.1013
 PKGNAME=	p5-${DISTNAME}
@@ -25,6 +25,8 @@ DEPENDS+=	p5-Text-MicroTemplate-[0-9]*:../../textproc/p5-Text-MicroTemplate
 DEPENDS+=	p5-Try-Tiny-[0-9]*:../../devel/p5-Try-Tiny
 DEPENDS+=	p5-Twiggy-[0-9]*:../../www/p5-Twiggy
 #DEPENDS+=	{perl>=5.10.1,p5-parent-[0-9]*}:../../devel/p5-parent
+
+MAKE_ENV+=	PERL_USE_UNSAFE_INC=1
 
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
