--- a/www/nginx-devel/Makefile
+++ b/www/nginx-devel/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.24 2017/05/02 12:31:43 fhajny Exp $
+# $NetBSD: Makefile,v 1.25 2017/06/29 12:20:06 fhajny Exp $
 
 DISTNAME=		nginx-1.13.0
 MAINTAINER=		imil@NetBSD.org
 
+PKGREVISION=	1
 .include "../../www/nginx/Makefile.common"
