--- a/www/nginx/Makefile
+++ b/www/nginx/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.71 2017/06/05 14:25:07 ryoon Exp $
+# $NetBSD: Makefile,v 1.72 2017/06/29 12:20:05 fhajny Exp $
 
 DISTNAME=		nginx-1.12.0
 MAINTAINER=		joerg@NetBSD.org
 
-PKGREVISION= 1
+PKGREVISION=	2
 .include "../../www/nginx/Makefile.common"
