meta-pkgs/mate: add libmatemixer to Makefile

--- a/meta-pkgs/mate/Makefile
+++ b/meta-pkgs/mate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.20 2019/03/06 05:47:42 gutteridge Exp $
+# $NetBSD: Makefile,v 1.21 2019/03/09 01:51:27 gutteridge Exp $
 
 PKGNAME=	mate-${VERSION}
 CATEGORIES=	meta-pkgs
@@ -16,6 +16,7 @@ DEPENDS+=	caja-extensions>=${VERSION}:../../sysutils/caja-extensions
 DEPENDS+=	engrampa>=${VERSION}:../../archivers/engrampa
 DEPENDS+=	eom>=${VERSION}:../../graphics/eom
 DEPENDS+=	libmatekbd>=${VERSION}:../../x11/libmatekbd
+DEPENDS+=	libmatemixer>=${VERSION}:../../audio/libmatemixer
 DEPENDS+=	libmateweather>=${VERSION}:../../misc/libmateweather
 DEPENDS+=	marco>=${VERSION}:../../wm/marco
 DEPENDS+=	mate-applets>=${VERSION}:../../x11/mate-applets
